# gpt-tana-import

./: .bandit  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  coverage.xml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/agents/: evaluate.md
.github/workflows/: ci.yml
docs/: NEW_ISSUE_TEMPLATE.md
docs/adrs/: 0001-use-python-as-implementation-language.md  0002-comprehensive-quality-tooling-upfront.md  0003-pytest-black-mypy-stack.md  0004-test-coverage-targets.md  README.md
docs/logs/: 2026-01-01-initial-setup.md  2026-01-01-quality-tooling-implementation.md  2026-01-02-chatgpt-tana-import-implementation.md
docs/plans/: chatgpt-tana-import-implementation-plan.md  quality-tooling-issue.md  quality-tooling-plan.md
docs/spec/: requirements.md
examples/: example_chatgpt_export.json
scripts/: check-all.sh
src/tana_import/: __init__.py  api_client.py  cli.py  config.py  converter.py  models.py  parser.py
tests/: __init__.py  conftest.py  test_api_client.py  test_cli.py  test_config.py  test_converter.py  test_models.py  test_parser.py
tests/fixtures/: sample_chatgpt_export.json
tests/integration/: __init__.py
